Feature/cyber25 darkmode (#5)
* [Cyber29] ui: mise a jour du formulaire

* [Cyber] feature: test fetch et reprise du code client/server supabase

* [cyber] fetch: mise en attente

* [cyber25] feature: début de la mise en place du dark mode

* [cyber25] darkmode : fonctionnel

* [cyber25] darkmode : amélioration de dark mode et correction probleme sur formulaire log in et signin quand dark mode actif

* [cyber25] darkmode : amélioration de dark mode et correction probleme sur formulaire signin et signup quand dark mode actif

* [Cyber25] FIX: fix typo + dark/light mode + icons

* [Cyber25] FIX: fix dark mode on title

---------

Co-authored-by: VinceS42 <v.fayon.pro@gmail.com>

--- a/app/globals.css
+++ b/app/globals.css
@@ -68,9 +68,9 @@
 
 @layer base {
     * {
-        /* @apply border-border; */
+        @apply border-border;
     }
     body {
-        @apply bg-backgroundCyber text-foreground;
+        @apply bg-cyberPrimary text-foreground;
     }
 }
